Creating a better drawing experience

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="canvas"></div>
+    <script src="./src/functions.js"></script>
     <script src="./src/Canvas.js"></script>
     <script src="./src/CanvasDom.js"></script>
     <script>
