--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <script src="./src/App.js"></script>
         <script src="./src/Canvas.js"></script>
         <script src="./src/CanvasDom.js"></script>
+        <script src="https://cdn.socket.io/3.1.3/socket.io.min.js"></script>
         <script>
             (function () {
                 var app = new App();
